[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.3"
name = "robotblockset"
description = "Robotblockset (RBS) allows control of various robots and provides common functions such as transformations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Leon Zlajpah", email = "leon.zlajpah@ijs.si" },
]
keywords = ["robot", "toolbox", "python", "robots", "control", "transformations", "trajectory", "optimal", "path"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.24",
  "quaternionic>=1.0.12",
  "matplotlib>=3.7.5",
  "scipy",
  "sympy",
  "pyyaml",
]

[project.urls]
Homepage = "https://repo.ijs.si/leon/robotblockset_python"

[project.optional-dependencies]
models = ["yourdfpy"]
docs = ["sphinx>=8,<9", "sphinx-rtd-theme>=3,<4"]
mujoco = ["mujoco", "mediapy"]
franka = ["panda-python"]
ur = ["ur_rtde"]
robotiq = ["pyRobotiqGripper"]
path = ["ompl"]
cameras = ["opencv-contrib-python", "pyrealsense2", "open3d", "pydantic", "pypylon"]
genesis = ["genesis-world", "torch"]
coppelia = ["coppeliasim-zmqremoteapi-client"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["robotblockset", "robotblockset.*"]
